--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ html {
 	-webkit-print-color-adjust: exact;
 }
 
-html,
-body {
+html,body {
 	margin: 0;
 	padding: 0;
 }
@@ -27,8 +26,7 @@ body {
 	white-space: pre-wrap;
 }
 
-a,
-a.visited {
+a,a.visited {
 	color: inherit;
 	text-decoration: underline;
 }
@@ -38,9 +36,7 @@ a.visited {
 	color: #444;
 }
 
-h1,
-h2,
-h3 {
+h1,h2,h3 {
 	letter-spacing: -0.01em;
 	line-height: 1.2;
 	font-weight: 600;
@@ -171,9 +167,7 @@ img {
 	border-bottom: 1px solid rgba(55, 53, 47, 0.18);
 }
 
-table,
-th,
-td {
+table,th,td {
 	border: 1px solid rgba(55, 53, 47, 0.09);
 	border-collapse: collapse;
 }
@@ -183,8 +177,7 @@ table {
 	border-right: none;
 }
 
-th,
-td {
+th,td {
 	font-weight: normal;
 	padding: 0.25em 0.5em;
 	line-height: 1.5;
@@ -196,15 +189,13 @@ th {
 	color: rgba(55, 53, 47, 0.6);
 }
 
-ol,
-ul {
+ol,ul {
 	margin: 0;
 	margin-block-start: 0.6em;
 	margin-block-end: 0.6em;
 }
 
-li > ol:first-child,
-li > ul:first-child {
+li > ol:first-child,li > ul:first-child {
 	margin-block-start: 0.6em;
 }
 
@@ -375,8 +366,7 @@ p > .user {
 	opacity: 0.5;
 }
 
-td > .user,
-td > time {
+td > .user,td > time {
 	white-space: nowrap;
 }
 
@@ -399,8 +389,7 @@ p {
 	text-align: center;
 }
 
-.code,
-code {
+.code,code {
 	background: rgba(135, 131, 120, 0.15);
 	border-radius: 3px;
 	padding: 0.2em 0.4em;
