--- a/index.html
+++ b/index.html
@@ -53,15 +53,10 @@
 	</tr>
 </tbody></table>
 	<br/><br/>
-</div></div></article>
-
-<span class="sans" style="font-size:14px;padding-top:2em"></span>
+</div></div></article><span class="sans" style="font-size:14px;padding-top:2em"></span>
 
 <div id="popup-overlay" class="popup-overlay"></div>
 <div id="myPopup" class="popup-content">
     <button id="closePopup">x</button>
-</div>
-
-
-
+</div><h4 class="collection-title" style="margin-left: 40px;">insta:  <a href="instagram.com/pennyboxdesign">@pennyboxdesign</a>    &#124;    email:  <a href="mailto:pennyboxdesign@gmail.com">pennyboxdesign@gmail.com</a></h4></a>
 </body></html><script src="/script.js"></script>
