--- a/index.html
+++ b/index.html
@@ -58,5 +58,5 @@
 <div id="popup-overlay" class="popup-overlay"></div>
 <div id="myPopup" class="popup-content">
     <button id="closePopup">x</button>
-</div><h4 class="collection-title" style="margin-left: 40px;">insta:  <a href="instagram.com/pennyboxdesign">@pennyboxdesign</a>    &#124;    email:  <a href="mailto:pennyboxdesign@gmail.com">pennyboxdesign@gmail.com</a></h4></a>
+</div><h4 class="collection-title" style="margin-left: 40px;">insta:  <a href="https://www.instagram.com/pennyboxdesign">@pennyboxdesign</a>    &#124;    email:  <a href="mailto:pennyboxdesign@gmail.com">pennyboxdesign@gmail.com</a></h4></a>
 </body></html><script src="/script.js"></script>
