--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta name="viewport" content="width=device-width, initial-scale=0.6"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>pennyboxdesigns</title><link rel="stylesheet" href="/style.css"></head>
+<html><head><meta name="viewport" content="width=device-width, initial-scale=0.6"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>pennyboxdesigns</title><link rel="stylesheet" href="/style.css"><link rel="icon" type="image/x-icon" href="/pennyboxdesigns 25685ddc4f70800aaa84c30a8f48ff6e/PB_logo_grain.png"></head>
 
 <body><article class="page sans"><marquee class="banner-marquee">email pennyboxdesign@gmail.com or dm @pennyboxdesign on instagram for commission or inquiries. Take time for yourself, stay healthy &lt;3&lt;3</marquee><header><h1 class="page-title">  penny box designs</h1><p class="page-description"></p></header><div class="page-body"><p id="25685ddc-4f70-809d-8a18-cb5f74f757f7" class="">
 </p>
